--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page Prueba</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="/landingPage.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/index.js" type="text/javascript"></script>
 
 </head>
 
